# libudfread

./: .gitignore  .gitlab-ci.yml  .mailmap  ChangeLog  Makefile.am  configure.ac  meson.build  meson_options.txt
examples/: meson.build
package/crossfiles/: aarch64-w64-mingw32.meson  armv7-w64-mingw32.meson  i686-w64-mingw32.meson  x86_64-w64-mingw32.meson
src/: attributes.h  default_blockinput.c  meson.build  udfread-version.h.in  udfread.c  udfread.h
src/udfread/: meson.build
